# commonforms

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  biome.jsonc  bunfig.toml  fly.toml  package.json  pyproject.toml  turbo.json
.github/workflows/: ci.yml
.husky/: pre-push
apps/chrome-extension/: index.html  manifest.config.ts  package.json  tsconfig.json  vite.config.ts
apps/chrome-extension/src/: App.tsx  background.ts  main.tsx  styles.css
apps/inference-api/: README.md  pyproject.toml
apps/inference-api/app/: api.py  config.py  jobs.py  main.py  schemas.py  storage.py  worker.py
apps/inference-api/tests/: test_jobs_api.py
apps/tester-ui/: index.html  package.json
apps/tester-ui/src/: App.tsx
apps/tester-ui/src/components/: JobCard.tsx  JobHistory.tsx  JobList.tsx  JobProgress.tsx  JobUploader.tsx  Layout.tsx  SettingsPanel.tsx
apps/tester-ui/src/components/ui/: progress.tsx
apps/tester-ui/src/constants/: api.ts  timing.ts  validation.ts
apps/tester-ui/src/hooks/: useFileUpload.ts  useJobMetrics.ts
apps/tester-ui/src/lib/api/: client.ts  schemas.ts
apps/tester-ui/src/lib/query/: client.ts  hooks.ts  keys.ts
apps/tester-ui/src/lib/store/: history.ts  settings.ts
apps/tester-ui/src/types/: radix-slot.d.ts
apps/tester-ui/src/utils/: format.ts  stage-labels.ts  validation.ts
docs/: fastapi-job-service-plan.md  monorepo.md  tester-ui-plan.md
