[project]
name = "commonforms-inference-api"
version = "0.0.1"
description = "FastAPI service for CommonForms PDF processing"
requires-python = ">=3.11"
dependencies = [
    "commonforms-core",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.12.1",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
commonforms-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.27",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
